--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  margin: 0;
+  padding: 0;
 }
 
 .App-logo {
@@ -35,4 +37,83 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.website-content {
+    margin-top: 1%;
+}
+
+.second-card {
+    margin-top: 20px;
+}
+
+.fourth-year-table, .third-year-table {
+    margin: auto;
+    width: 100%;
+}
+
+
+#container {
+    width: 100%;
+    height: 100vh;
+}
+#container div {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+.red {
+    background-color: #001f3f;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+.page-1 {
+    background-color: #F7CAC9;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+.page-2 {
+    background-color: #001f3f;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+.page-3 {
+    background-color: #F7CAC9;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+.page-4 {
+    background-color: #001f3f;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+
+.nassim-introduction {
+    color: pink;
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    top: 25%;
+    bottom: 25%;
+    left: 25%;
+    right: 25%;
+}
+
+.entry-button {
+    font-family: 'Roboto', sans-serif;
+    position: absolute;
+    top: 50%;
+    bottom: 45%;
+    left: 50%;
+    right: 25%;
+}
+
+.about-nav-bar {
+    height: 8%;
+    width: 100%;
 }
