--- a/src/App.css
+++ b/src/App.css
@@ -43,27 +43,9 @@
     margin-top: 1%;
 }
 
-.second-card {
-    margin-top: 20px;
-}
-
-.fourth-year-table, .third-year-table {
-    margin: auto;
-    width: 100%;
-}
 
 
-#container {
-    width: 100%;
-    height: 100vh;
-}
-#container div {
-    position: relative;
-    width: 100%;
-    height: 100vh;
-}
-
-.red {
+.intro-page {
     background-color: #001f3f;
     position: relative;
     width: 100%;
@@ -111,9 +93,4 @@
     bottom: 45%;
     left: 50%;
     right: 25%;
-}
-
-.about-nav-bar {
-    height: 8%;
-    width: 100%;
 }
