--- a/src/App.css
+++ b/src/App.css
@@ -46,10 +46,18 @@
 
 
 .intro-page {
-    background-color: #001f3f;
+    background-color: #363645;
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 85vh;
+    border-bottom-left-radius: 20px;
+    border-bottom-right-radius: 20px;
+}
+.intro-bottom {
+    background-color: #FFFFFF;
+    position: relative;
+    width: 100%;
+    height: 15vh;
 }
 .page-1 {
     background-color: #F7CAC9;
@@ -76,21 +84,39 @@
     height: 100vh;
 }
 
-.nassim-introduction {
-    color: pink;
-    font-family: 'Roboto', sans-serif;
+.intro-container {
     position: absolute;
-    top: 25%;
+    top: 30%;
     bottom: 25%;
-    left: 25%;
-    right: 25%;
+    left: 20%;
+    right: 45%;
+}
+.name-heading {
+    color: #FFFFFF;
+    font-family: 'Roboto', sans-serif;
+    font-size: 65px;
+    line-height: 65px;
+    text-align: left;
+}
+.profile-paragraph {
+    color: #FFFFFF;
+    font-family: 'Roboto', sans-serif;
+    font-size: 20px;
+    line-height: 26px;
+    text-align: left;
+}
+.linkedin-and-git {
+    text-align: left;
+    color: #FF6D6D;
+}
+linkedin-button {
+    color: #FF6D6D;
 }
 
 .entry-button {
     font-family: 'Roboto', sans-serif;
-    position: absolute;
-    top: 50%;
-    bottom: 45%;
-    left: 50%;
-    right: 25%;
+
+}
+.entry-button-text {
+    color: white;
 }
