--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,20 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+.btn-primary {
+    color: #ffffff;
+    background-color: #FF6D6D;
+    border: none;
+    border-radius: 10px;
+    margin-top: 1.5%;
+}
+    .btn-primary:hover,
+    .btn-primary::selection,
+    .btn-primary:focus,
+    .btn-primary:active .btn-primary.active,
+    .open > .dropdown-toggle.btn-primary {
+        color: #ffffff;
+        background-color: #f24e4e;
+        border-color: #ffffff;
+    }
