--- a/src/App.css
+++ b/src/App.css
@@ -45,20 +45,10 @@
 
 
 
-.intro-page {
-    background-color: #363645;
-    position: relative;
-    width: 100%;
-    height: 90vh;
-    border-bottom-left-radius: 20px;
-    border-bottom-right-radius: 20px;
-}
-.intro-botton {
-    background-color: #FFFFFF;
-    position: relative;
-    width: 100%;
-    height: 10vh;
-}
+
+
+
+
 .page-1 {
     background-color: #FFFFFF;
     width: 100%;
@@ -72,7 +62,7 @@
     width: 100%;
     min-height: 100vh;
     border: solid;
-    border-color: blue;
+    border-color: #F5F5F5;
 }
 .page-3 {
     background-color: #FFFFFF;
@@ -87,28 +77,7 @@
     height: 100vh;
 }
 
-.intro-container {
-    position: absolute;
-    top: 15%;
-    bottom: 25%;
-    left: 20%;
-    right: 10%;
-}
-.intro-container-left {
-    margin-top: 8%;
-    position: absolute;
-    left: 0;
-    right: 50%;
-}
-.intro-container-right {
-    margin-top: 8%;
-    position: absolute;
-    right: 25;
-    left: 75%;
-    height: 500px;
-    width: 500px;
-    border-radius: 50%;
-}
+
 .name-heading {
     color: #FFFFFF;
     font-family: 'Roboto', sans-serif;
@@ -123,30 +92,126 @@
     line-height: 26px;
     text-align: left;
 }
+
+
+
+/*Intro Page (landing page)*/
+.intro-page {
+    background-color: #363645;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+}
+.intro-container {
+    position: absolute;
+    top: 15%;
+    bottom: 0%;
+    left: 10%;
+    right: 10%;
+}
+.intro-container-left {
+    margin-right: 40%;
+}
+.name-heading {
+    line-height: 92%;
+}
+.profile-paragraph {
+    margin-top: 1.8em;
+    line-height: 150%;
+}
+.intro-button-container {
+    position: absolute;
+    bottom: 0%;
+    width: 100%;
+}
+
+
+/* Buttons */
 .linkedin-and-git {
     text-align: left;
     color: #FF6D6D;
 }
-linkedin-button {
-    color: #FF6D6D;
+.linkedin-button {
+    color: #fff;
+    background-color: #FF6D6D;
+    text-align: center;
+    padding: 5px 10px;
+    transition: all 0.5s;
+    border-radius: 10px;
+    display: inline-block;
+    margin: 0.2em;
+
 }
-
-.sticky-navbar mr-auto > .active {
-    color: red;
-    background-color: green;
-    border-bottom: 1px solid black;
+    .linkedin-button:hover {
+        background-color: #f24e4e;
+        text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+        -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+        -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    }
+.linkedin-button-a-tag {
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    font-weight: 700;
+    text-decoration: none;
 }
-
-
+    .linkedin-button-a-tag:hover {
+        text-decoration: none;
+        color: #fff;
+    }
+.github-button {
+    color: #fff;
+    background-color: #FF6D6D;
+    text-align: center;
+    padding: 5px 10px;
+    transition: all 0.5s;
+    border-radius: 10px;
+    display: inline-block;
+    margin: 0.2em;
+}
+    .github-button:hover {
+        background-color: #f24e4e;
+        text-shadow: 0px 0px 6px rgba(255, 255, 255, 1);
+        -webkit-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+        -moz-box-shadow: 0px 5px 40px -10px rgba(0,0,0,0.57);
+    }
+.github-button-a-tag {
+    color: #fff;
+    font-family: 'Roboto', sans-serif;
+    font-size: 1rem;
+    font-weight: 600;
+    text-decoration: none;
+}
+    .github-button-a-tag:hover {
+        text-decoration: none;
+        color: #fff;
+    }
 /*
-.card-page-1 {
-    height: 90vh;
-    font-size: 1.05vw;
-    margin-left: 20vw;
-    margin-right: 20vw;
-    overflow: scroll;
+.intro-button {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 900;
+    font-size: 1.5rem;
+    color: #fff;
+    margin-left: 20%;
+    margin-right: 20%;
+    margin-bottom: 10%;
+    padding: 0.3em 1em;
+    text-align: center;
+    transition: all 0.5s;
 }
 */
+
+
+
+
+
+
+    .sticky-navbar mr-auto > .active {
+        color: red;
+        background-color: green;
+        border-bottom: 1px solid black;
+    }
+
 
 .page-1-top-div {
     height: 8%;
@@ -166,9 +231,13 @@ linkedin-button {
     }
 }
 
-
+.technologies-page-1 {
+    
+}
 .top-container-page-1 {
     display: flex;
+    margin-left: 1.5%;
+    margin-right: 1.5%;
 }
 .top-left-container-page-1 {
     width: 30%;
@@ -179,7 +248,7 @@ linkedin-button {
 
 .my-photo {
     width: 100%;
-    padding: 15px;
+    padding: 7.5%;
     background-color: white;
     box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
     -moz-box-shadow: 0 1px 2px rgba(34,25,25,0.4);
@@ -190,4 +259,90 @@ linkedin-button {
     margin-left: 5%;
     padding: 2% 5%;
     font-family: 'Roboto', sans-serif;
+    box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+    -moz-box-shadow: 0 1px 2px rgba(34,25,25,0.4);
+    -webkit-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
+    transition: 1s ease;
+}
+.card-top-right-page-1:hover {
+    background-color: #fafafa;
+}
+
+
+
+
+
+.intro-button {
+    font-family: 'Roboto', sans-serif;
+    display: inline-flex;
+    height: 40px;
+    width: 150px;
+    border: 2px solid #BFC0C0;
+    margin: 20px 20px 20px 20px;
+    color: #BFC0C0;
+    text-transform: uppercase;
+    text-decoration: none;
+    font-size: .8em;
+    letter-spacing: 1.5px;
+    align-items: center;
+    justify-content: center;
+    overflow: hidden;
+}
+
+a {
+    color: #BFC0C0;
+    text-decoration: none;
+    letter-spacing: 1px;
+}
+
+
+
+
+.intro-button {
+    position: relative;
+    overflow: hidden;
+    cursor: pointer;
+}
+
+    .intro-button a {
+        position: relative;
+        left: 0;
+        transition: all .35s ease-Out;
+    }
+
+#dub-arrow {
+    width: 100%;
+    height: 100%;
+    background: #BFC0C0;
+    left: -200px;
+    position: absolute;
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all .35s ease-Out;
+    bottom: 0;
+}
+
+.intro-button img {
+    width: 20px;
+    height: auto;
+}
+
+.intro-button:hover #dub-arrow {
+    left: 0;
+}
+
+.intro-button:hover a {
+    left: 150px;
+}
+
+@media screen and (min-width:1000px) {
+    h1 {
+        font-size: 2.2em;
+    }
+
+    #container {
+        width: 50%;
+    }
 }
