--- a/src/App.css
+++ b/src/App.css
@@ -50,7 +50,7 @@
 
 
 .page-1 {
-    background-color: #FFFFFF;
+    background-color: #fff;
     width: 100%;
     min-height: 100vh;
     border: solid;
@@ -97,7 +97,7 @@
 
 /*Intro Page (landing page)*/
 .intro-page {
-    background-color: #363645;
+    background-color: #252934;
     position: relative;
     width: 100%;
     height: 100vh;
@@ -110,14 +110,25 @@
     right: 10%;
 }
 .intro-container-left {
-    margin-right: 40%;
+    margin-top: 29.5vh;
 }
+@media only screen and (max-width: 767px) {
+    .intro-container-left {
+    }
+}
+
 .name-heading {
     line-height: 92%;
 }
 .profile-paragraph {
+    font-family: 'Raleway', sans-serif;
     margin-top: 1.8em;
-    line-height: 150%;
+    line-height: 120%;
+    font-size: 1.8rem;
+    color: #BFC0C0;
+}
+.my-name {
+    color: #f24e4e;
 }
 .intro-button-container {
     position: absolute;
@@ -206,11 +217,11 @@
 
 
 
-    .sticky-navbar mr-auto > .active {
-        color: red;
-        background-color: green;
-        border-bottom: 1px solid black;
-    }
+.sticky-navbar mr-auto > .active {
+    color: red;
+    background-color: green;
+    border-bottom: 1px solid black;
+}
 
 
 .page-1-top-div {
@@ -231,19 +242,20 @@
     }
 }
 
-.technologies-page-1 {
-    
-}
+
 .top-container-page-1 {
     display: flex;
     margin-left: 1.5%;
     margin-right: 1.5%;
 }
 .top-left-container-page-1 {
-    width: 30%;
+    width: 35%;
 }
 .top-right-container-page-1 {
-    width: 70%;
+    width: 65%;
+    display: flex;
+    font-family: 'Raleway', sans-serif;
+    color: #252934;
 }
 
 .my-photo {
@@ -256,24 +268,42 @@
 }
 
 .card-top-right-page-1 {
-    margin-left: 5%;
+    margin-left: 3vw;
     padding: 2% 5%;
-    font-family: 'Roboto', sans-serif;
     box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
     -moz-box-shadow: 0 1px 2px rgba(34,25,25,0.4);
     -webkit-box-shadow: 0 1px 3px rgba(34, 25, 25, 0.4);
     transition: 1s ease;
-}
-.card-top-right-page-1:hover {
-    background-color: #fafafa;
+    display: flex;
 }
 
 
-
+.technologies-left {
+    width: 50%;
+}
+.technologies-right {
+    width: 50%;
+}
+.javascript-logo {
+    width: 50%;
+    display: block;
+}
+.python-logo {
+    width: 50%;
+    display: block;
+}
+.html-logo {
+    width: 50%;
+    display: block;
+}
+.css-logo {
+    width: 50%;
+    display: block;
+}
 
 
 .intro-button {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Raleway', sans-serif;
     display: inline-flex;
     height: 40px;
     width: 150px;
@@ -282,7 +312,7 @@
     color: #BFC0C0;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: .8em;
+    font-size: 1em;
     letter-spacing: 1.5px;
     align-items: center;
     justify-content: center;
