--- a/src/App.css
+++ b/src/App.css
@@ -185,51 +185,40 @@
 }
 .top-container-page-1 {
     display: flex;
-    margin-left: 1.5%;
-    margin-right: 1.5%;
+    margin-left: 3%;
+    margin-right: 5%;
     margin-top: 3.5em;
 }
-.technologies-title {
-    text-align: left;
-    margin-left: 1em;
-    margin-bottom: 0.6em;
-    font-family: 'Raleway-bold', sans-serif;
-    line-height: 120%;
-    font-size: 1.7rem;
-    color: #252934;
-    font-weight: 500;
-}
-
-/*Would like an infinite horizontal scroll*/
-.technologies-bar {
-    display: inline;
-}
-
-.javascript-logo,
-.react-logo,
-.html-logo,
-.css-logo,
-.python-logo {
-    width: 15%;
-    margin: 0.5em;
-}
 .top-right-container-page-1 {
-    width: 50%;
-}
-.top-left-container-page-1 {
-    width: 50%;
-    display: flex;
+    width: 55%;
     font-family: 'Raleway', sans-serif;
     color: #252934;
     text-align: left;
-    margin-left: 5%;
+    padding: 2%;
+    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
+    line-height: 1rem;
+}
+.top-left-container-page-1 {
+    width: 45%;
+    margin-right: 5%;
+
 }
 .my-photo {
     width: 100%;
-    padding: 7.5%;
+    width: 100%;
     background-color: #fff;
+    border-radius: 50%;
+    box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
 }
-
+.quotation-marks {
+    white-space: nowrap;
+    color: #f24e4e;
+    font-size: 1.6rem;
+    font-weight: 900;
+}
 
 
 
@@ -333,32 +322,13 @@
 #sticky-nav-links-id-3,
 #sticky-nav-links-id-4 {
     color: #BFC0C0 !important;
-
-
-
     font-family: 'Raleway', sans-serif;
-    
-    
-    
-    
     text-transform: uppercase;
     text-decoration: none;
     font-size: 1em;
     letter-spacing: 1.5px;
     align-items: center;
     justify-content: center;
-
-}
-
-
-
-
-
-
-
-
-.swiper {
-    height: 300px;
 }
 
 
@@ -372,28 +342,15 @@
 
 
 
-.technology-logo-card {
-    border: solid;
-    background-color: #D2DBDD;
-    display: flex;
-    display: -webkit-flex;
-    -webkit-justify-content: center;
-    -webkit-align-items: center;
-    justify-content: center;
-    align-items: center;
-    margin: 0;
-    width: 100%;
-    height: 100%;
-    padding: 0;
-    -webkit-justify-content: center;
-    max-width: 820px;
-    z-index: -1;
-}
 
 
 
-@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700');
-@import url('https://fonts.googleapis.com/css?family=Raleway:300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i');
+
+
+
+
+
+
 
 
 
