--- a/src/App.css
+++ b/src/App.css
@@ -316,6 +316,7 @@
     border-bottom: solid 0.3em;
     border-bottom-color: #F24E4E;
     color: #BFC0C0;
+    opacity: 0.95;
 }
 #sticky-nav-links-id-1,
 #sticky-nav-links-id-2,
