--- a/src/App.css
+++ b/src/App.css
@@ -189,6 +189,8 @@
     margin-right: 5%;
     margin-top: 3.5em;
 }
+
+/* ----------------------------------------------------------------- Would like image and right div to animate in from each side */
 .top-right-container-page-1 {
     width: 55%;
     font-family: 'Raleway', sans-serif;
