--- a/src/App.css
+++ b/src/App.css
@@ -58,51 +58,6 @@
 }
 
 
-
-/*Intro Page (landing page)*/
-.intro-page {
-    background-color: #252934;
-    width: 100%;
-    height: 100vh;
-    z-index: 9999;
-}
-.intro-container {
-    position: absolute;
-    top: 15%;
-    bottom: 0%;
-    left: 10%;
-    right: 10%;
-}
-.intro-container-left {
-    margin-top: 29.5vh;
-}
-@media only screen and (max-width: 767px) {
-    .intro-container-left {
-    }
-}
-
-.name-heading {
-    line-height: 92%;
-}
-.profile-paragraph {
-    font-family: 'Raleway', sans-serif;
-    margin-top: 1.8em;
-    line-height: 120%;
-    font-size: 1.8rem;
-    color: #BFC0C0;
-}
-.my-name {
-    color: #f24e4e;
-}
-.intro-button-container {
-    position: absolute;
-    bottom: 0%;
-    width: 100%;
-}
-
-
-
-
 /*Page One CSS*/
 
 .page-1-top-div {
@@ -180,6 +135,27 @@
     line-height: 1rem;
 }
 
+.project-container {
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    background-image: url(ml-sarcasm.JPG);
+    background-size: cover;
+    background-position: center;
+    height: 35vh;
+    border: solid;
+}
+.project-image {
+    width: 100vw;
+}
+.project-title {
+    position: relative;
+    top: 6em;
+}
+.project-languages {
+    position: relative;
+    top: 6em;
+}
 
 
 
@@ -379,3 +355,17 @@
     padding-right: 5%;
 }
 
+
+
+.top-paragraph-page-2 {
+    margin: 5%;
+    font-family: 'Raleway', sans-serif;
+    color: #252934;
+    text-align: left;
+    padding: 2%;
+    transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+    border-radius: 12px;
+    overflow: hidden;
+    box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
+    line-height: 1rem;
+}
