--- a/src/App.css
+++ b/src/App.css
@@ -97,6 +97,8 @@
     overflow: hidden;
     box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
     line-height: 1rem;
+    font-size: 2rem;
+    
 }
 .bottom-left-container-page-1 {
     width: 45%;
@@ -165,70 +167,14 @@
 
 
 
-.intro-button {
-    font-family: 'Raleway', sans-serif;
-    display: inline-flex;
-    height: 40px;
-    width: 150px;
-    border: 2px solid #BFC0C0;
-    margin: 20px 20px 20px 20px;
-    color: #BFC0C0;
-    text-transform: uppercase;
-    text-decoration: none;
-    font-size: 1em;
-    letter-spacing: 1.5px;
-    align-items: center;
-    justify-content: center;
-    overflow: hidden;
-}
-
-.intro-button-text {
-    color: #BFC0C0;
-    text-decoration: none;
-    letter-spacing: 1px;
-}
 
 
 
 
-.intro-button {
-    position: relative;
-    overflow: hidden;
-    cursor: pointer;
-}
 
-    .intro-button a {
-        position: relative;
-        left: 0;
-        transition: all .35s ease-Out;
-    }
 
-#dub-arrow {
-    width: 100%;
-    height: 100%;
-    background: #BFC0C0;
-    left: -200px;
-    position: absolute;
-    padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    transition: all .35s ease-Out;
-    bottom: 0;
-}
 
-.intro-button img {
-    width: 20px;
-    height: auto;
-}
 
-.intro-button:hover #dub-arrow {
-    left: 0;
-}
-
-.intro-button:hover a {
-    left: 150px;
-}
 
 @media screen and (min-width:1000px) {
     h1 {
