--- a/src/style/css/IntroPage.css
+++ b/src/style/css/IntroPage.css
@@ -21,7 +21,7 @@
   color: #BFC0C0;
 }
 
-.intro-page .intro-container .my-name {
+.intro-page .intro-container .profile-paragraph .my-name {
   color: #f24e4e;
 }
 
