--- a/src/style/css/Page2.css
+++ b/src/style/css/Page2.css
@@ -100,4 +100,46 @@
   font-size: 0.8rem;
   color: #F24E4E;
 }
+
+.page-2 .page-content-container .project-3 {
+  position: absolute;
+  top: 70vh;
+}
+
+.page-2 .page-content-container .project-3 .c {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  background-size: cover;
+  background-position: center;
+  height: 35vh;
+  width: 100vw;
+}
+
+.page-2 .page-content-container .project-3 .projects-container-front {
+  background-image: url(../../Images/todo.jpg);
+}
+
+.page-2 .page-content-container .project-3 .projects-container-back {
+  border: solid;
+}
+
+.page-2 .page-content-container .project-3 .projects-container-back .project-title {
+  font-size: 1.4rem;
+  font-weight: 500;
+  text-transform: uppercase;
+}
+
+.page-2 .page-content-container .project-3 .projects-container-back .project-languages {
+  font-size: 0.8rem;
+  color: #F24E4E;
+}
 /*# sourceMappingURL=Page2.css.map */
