--- a/src/style/scss/Page2.scss
+++ b/src/style/scss/Page2.scss
@@ -35,9 +35,6 @@
                     font-size: 0.8rem;
                     color: #F24E4E;
                 }
-                #button-ml-project {
-                
-                }
             }
         }
         .todo {
@@ -67,8 +64,34 @@
                     font-size: 0.8rem;
                     color: #F24E4E;
                 }
-                #button-ml-project {
-                
+            }
+        }
+        .project-3 {
+            position: absolute;
+            top: 70vh;
+            .c {
+                position: absolute;
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                background-size: cover;
+                background-position: center;
+                height: 35vh;
+                width: 100vw;
+            }
+            .projects-container-front {
+                background-image: url(../../Images/todo.jpg);
+            }
+            .projects-container-back {
+                border: solid;
+                .project-title {
+                    font-size: 1.4rem;
+                    font-weight: 500;
+                    text-transform: uppercase;
+                }
+                .project-languages {
+                    font-size: 0.8rem;
+                    color: #F24E4E;
                 }
             }
         }
