--- a/src/style/scss/Page2.scss
+++ b/src/style/scss/Page2.scss
@@ -3,6 +3,7 @@
     position: relative;
     width: 100%;
     min-height: 100vh;
+    height: 150vh;
     .page-content-container {
         position: relative;
         top: 10vh;
@@ -80,7 +81,7 @@
                 width: 100vw;
             }
             .projects-container-front {
-                background-image: url(../../Images/todo.jpg);
+                background-image: url(../../Images/MarsRover.jpg);
             }
             .projects-container-back {
                 border: solid;
