--- a/src/style/scss/_variables.scss
+++ b/src/style/scss/_variables.scss
@@ -1,4 +1,13 @@
 $font-sizes: (
     "regular": 1rem,
+    "projectTitleBack": 1.4rem,
+    "projectTitleFront": 2.2rem,
     "title": 1.8rem
+);
+
+$font-weights: (
+    "regular": 400,
+    "projectTitleBack": 500,
+    "projectTitleFront": 700,
+    "title": 700
 );
