--- a/src/style/scss/GenericButton.scss
+++ b/src/style/scss/GenericButton.scss
@@ -6,9 +6,8 @@
         display: inline-flex;
         height: 40px;
         width: 150px;
-        border: 2px solid black;
+        border: 2px solid;
         margin: 20px 20px 20px 20px;
-        color: black;
         text-transform: uppercase;
         text-decoration: none;
         font-size: 1em;
