--- a/src/style/scss/Page2.scss
+++ b/src/style/scss/Page2.scss
@@ -1,3 +1,6 @@
+@import './variables';
+@import './functions';
+
 .page-2 {
     background-color: #F5F5F5;
     position: relative;
@@ -24,12 +27,23 @@
             }
             .projects-container-front {
                 background-image: url(../../Images/NeuralNetwork.jpg);
+                .project-title-front {
+                    position: relative;
+                    margin-bottom: 20%;
+                    opacity: 1;
+                    background-color: black;
+                    color: white;  
+                    font-size: fontSize(projectTitleFront);
+                    font-weight: fontWeight(projectTitleFront);
+                    text-transform: uppercase;
+                    mix-blend-mode: overlay;
+                }
             }
             .projects-container-back {
                 border: solid;
                 .project-title {
-                    font-size: 1.4rem;
-                    font-weight: 500;
+                    font-size: fontSize(projectTitleBack);
+                    font-weight: fontWeight(projectTitleBack);
                     text-transform: uppercase;
                 }
                 .project-languages {
@@ -53,12 +67,23 @@
             }
             .projects-container-front {
                 background-image: url(../../Images/todo.jpg);
+                .project-title-front {
+                    position: relative;
+                    margin-bottom: 20%;
+                    opacity: 1;
+                    background-color: black;
+                    color: white;  
+                    font-size: fontSize(projectTitleFront);
+                    font-weight: fontWeight(projectTitleFront);
+                    text-transform: uppercase;
+                    mix-blend-mode: overlay;
+                }
             }
             .projects-container-back {
                 border: solid;
                 .project-title {
-                    font-size: 1.4rem;
-                    font-weight: 500;
+                    font-size: fontSize(projectTitleBack);
+                    font-weight: fontWeight(projectTitleBack);
                     text-transform: uppercase;
                 }
                 .project-languages {
@@ -82,12 +107,23 @@
             }
             .projects-container-front {
                 background-image: url(../../Images/MarsRover.jpg);
+                .project-title-front {
+                    position: relative;
+                    margin-bottom: 20%;
+                    opacity: 1;
+                    background-color: black;
+                    color: white;  
+                    font-size: fontSize(projectTitleFront);
+                    font-weight: fontWeight(projectTitleFront);
+                    text-transform: uppercase;
+                    mix-blend-mode: overlay;
+                }
             }
             .projects-container-back {
                 border: solid;
                 .project-title {
-                    font-size: 1.4rem;
-                    font-weight: 500;
+                    font-size: fontSize(projectTitleBack);
+                    font-weight: fontWeight(projectTitleBack);
                     text-transform: uppercase;
                 }
                 .project-languages {
