--- a/src/style/scss/Page3.scss
+++ b/src/style/scss/Page3.scss
@@ -1,3 +1,6 @@
+@import './variables';
+@import './functions';
+
 .page-3 {
     background-color: #D2DBDD;
     border: solid green;
@@ -12,7 +15,7 @@
         background-color: #ffffff;
         position: absolute;
         width: 50%;
-        height: 50%;
+        height: 40%;
         will-change: transform;
         border-radius: 12px;
         box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
@@ -20,10 +23,13 @@
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center center;
-            height: 60%;
+            margin-top: 1.5em;
+            height: 75%;
             width: 100%;
-            border-top-left-radius: 12px;
-            border-top-right-radius: 12px;
+        }
+        .swipe-card-title {
+            font-size: fontSize(projectTitleBack);
+            font-weight: fontWeight(projectTitleBack);
         }
     }
 }
