Updated page one style

--- a/src/style/css/IntroPage.css
+++ b/src/style/css/IntroPage.css
@@ -19,6 +19,7 @@
   line-height: 120%;
   font-size: 1.8rem;
   color: #BFC0C0;
+  text-align: left;
 }
 
 .intro-page .intro-container .profile-paragraph .my-name {
