--- a/src/style/scss/IntroPage.scss
+++ b/src/style/scss/IntroPage.scss
@@ -25,6 +25,7 @@
             line-height: 120%;
             font-size: fontSize(title);
             color: #BFC0C0;
+            text-align: left;
             .my-name {
                 color: #f24e4e;
             }
