--- a/src/style/scss/Navbar.scss
+++ b/src/style/scss/Navbar.scss
@@ -1,30 +1,34 @@
 .Navbar {
     position: relative;
     display: flex;
-    justify-content: space-between;
-    align-items: center;
-    background-color: mediumaquamarine;
+    background-color: #252934;
+    opacity: 0.95;
+    font-family: 'Raleway', sans-serif;
+    text-transform: uppercase;
     border: solid;
     .toggle-button {
-        border: solid;
-        padding: 0.3em;
-        position: absolute;
-        top: 0.75rem;
-        right: 1rem;
-        display: none;
-        flex-direction: column;
-        justify-content: space-between;
-        width: 3em;
-        height: 2em;
-        .bar {
-            height: 3px;
-            width: 100%;
-            background-color: black;
-            border-radius: 10px;
+        position: relative;
+        margin-top: 0.3rem;
+        margin-bottom: 0.3rem;
+        margin-right: 0.6rem;
+        .hamburger {
+            border: solid #BFC0C0;
+            padding: 0.3em;
+            display: none;
+            flex-direction: column;
+            justify-content: space-between;
+            width: 2.5em;
+            height: 2em;
+            .bar {
+                height: 2px;
+                width: 100%;
+                background-color: #BFC0C0;
+                border-radius: 10px;
+            }
         }
     }
     .navbar-links {
-        border: solid;
+        border: solid white;
         ul {
             margin: 0;
             padding: 0;
@@ -35,6 +39,7 @@
                     text-decoration: none;
                     padding: 1rem;
                     display: block;
+                    color: #BFC0C0;
                 }
             }
         }
@@ -43,15 +48,16 @@
 
 @media (max-width: 768px) {
     .Navbar {
-        min-height: 8vh;
         flex-direction: column;
-        align-items: flex-start;
+        align-items: flex-end;
         .toggle-button {
-            display: flex;
+            .hamburger {
+                display: flex;
+            }
         }
         .navbar-links {
-            width: 100%;
             display: none;
+            width: 100%;
             ul {
                 flex-direction: column;
                 width: 100%;
