--- a/src/style/scss/_variables.scss
+++ b/src/style/scss/_variables.scss
@@ -1,5 +1,6 @@
 $font-sizes: (
     "regular": 1rem,
+    "buttonText": 1.2rem,
     "projectTitleBack": 1.4rem,
     "projectTitleFront": 2.2rem,
     "title": 1.8rem
@@ -7,6 +8,7 @@ $font-sizes: (
 
 $font-weights: (
     "regular": 400,
+    "buttonText": 500,
     "projectTitleBack": 500,
     "projectTitleFront": 700,
     "title": 700
