--- a/src/style/scss/Page1.scss
+++ b/src/style/scss/Page1.scss
@@ -6,6 +6,7 @@
     background-color: #fff;
     width: 100%;
     min-height: 100vh;
+    overflow: hidden;
     .page-content-container {
         display: grid;
         grid-template-rows: max-content 45% max-content;
