Page one changes to appearance, down button now works

--- a/src/style/scss/Page1.scss
+++ b/src/style/scss/Page1.scss
@@ -6,85 +6,88 @@
     background-color: #fff;
     width: 100%;
     min-height: 100vh;
-    overflow: hidden;
-    .page-content-container {
-        display: grid;
-        grid-template-rows: max-content 45% max-content;
-        min-height: 90vh;
-        margin-left: 20vw;
-        margin-right: 20vw;
-        margin-top: 9em;
-        .top-container-page-1 {
-            position: relative;
-            grid-row-start: 1;
-            grid-row-end: 2;
-            display: flex;
-            padding: 4%;
-            .top-left-container-page-1 {
-                width: 45%;
-                margin-right: 5%;
-                .my-photo {
-                    width: 100%;
-                    border-radius: 50%;
-                    box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
-                }
-            }
-            .top-right-container-page-1 {
-                width: 55%;
-                font-family: 'Raleway', sans-serif;
-                color: #252934;
-                text-align: left;
-                padding: 2%;
-                transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
-                border-radius: 12px;
-                overflow: hidden;
+    display: grid;
+    grid-template-rows: max-content 40% max-content;
+    overflow-x: hidden;
+    .top-container-page-1 {
+        position: relative;
+        grid-row-start: 1;
+        grid-row-end: 2;
+        display: flex;
+        padding: 4%;
+        .top-left-container-page-1 {
+            width: 30%;
+            margin-right: 4%;
+            .my-photo {
+                width: 100%;
+                border-radius: 50%;
                 box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
-                line-height: 1rem;
-                font-size: 2rem;
-                .quotation-marks {
-                    white-space: nowrap;
-                    color: #f24e4e;
-                    font-size: 1.6rem;
-                    font-weight: 900;
-                }
             }
         }
-        .middle-container-page-1{
+        .top-right-container-page-1 {
+            width: 70%;
+            font-family: 'Raleway', sans-serif;
+            color: #252934;
+            text-align: left;
+            padding: 3.73%;
+            transition: all .4s cubic-bezier(0.175, 0.885, 0, 1);
+            border-radius: 12px;
+            overflow: hidden;
+            box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
+            line-height: 1rem;
+            font-size: 2rem;
+            .quotation-marks {
+                white-space: nowrap;
+                color: #f24e4e;
+                font-size: 1.6rem;
+                font-weight: 900;
+            }
+        }
+    }
+    .middle-container-page-1{
+        position: relative;
+        grid-row-start: 2;
+        grid-row-end: 3;
+        display: flex;
+        justify-content: center;
+        .swipe-card {
             position: relative;
-            grid-row-start: 2;
-            grid-row-end: 3;
-            display: flex;
-            justify-content: center;
-            .swipe-card {
-                position: relative;
-                background-color: #ffffff;
-                position: absolute;
-                width: 50%;
-                height: 100%;
-                will-change: transform;
-                border-radius: 12px;
-                box-shadow: 0px 13px 10px -7px rgba(0, 0, 0,0.1);
-                overflow: hidden;
-                .swipe-card-image {
-                    background-size: cover;
-                    background-repeat: no-repeat;
-                    background-position: center center;
-                    margin-top: 1.5em;
-                    height: 75%;
-                    width: 100%;
-                }
-                .swipe-card-title {
-                    font-size: fontSize(projectTitleBack);
-                    font-weight: fontWeight(projectTitleBack);
-                }
+            background-color: #ffffff;
+            position: absolute;
+            width: 50%;
+            height: 100%;
+            will-change: transform;
+            border-radius: 12px;
+            box-shadow: 5px 6px 10px 3px rgba(0, 0, 0,0.1);
+            overflow: hidden;
+            .swipe-card-image {
+                background-size: cover;
+                background-repeat: no-repeat;
+                background-position: center center;
+                margin-top: 1.5em;
+                height: 75%;
+                width: 100%;
+            }
+            .swipe-card-title {
+                font-size: fontSize(projectTitleBack);
+                font-weight: fontWeight(projectTitleBack);
             }
         }
-        .bottom-container-page-1 {
-            grid-row-start: 3;
-            padding-top: 1em;
+    }
+    .bottom-container-page-1 {
+        position: relative;
+        grid-row-start: 3;
+        padding-top: 1em;
+        display: flex;
+        justify-content: center;
+        .down-page-button{
+            width: fit-content;
+            display: flex;
+            flex-direction: column;
             .text-to-next-page {
-                font-size: fontSize(buttonText);
-                font-weight: fontWeight(buttonText);
+                font-family: 'Raleway', sans-serif;
+                font-size: 1rem;
+                font-weight: 500;
                 text-transform: uppercase;
             }
         }
