--- a/src/style/css/Page1.css
+++ b/src/style/css/Page1.css
@@ -3,22 +3,15 @@
   background-color: #fff;
   width: 100%;
   min-height: 100vh;
-  overflow: hidden;
-}
-
-.page-1 .page-content-container {
   display: -ms-grid;
   display: grid;
-  -ms-grid-rows: max-content 45% max-content;
-      grid-template-rows: -webkit-max-content 45% -webkit-max-content;
-      grid-template-rows: max-content 45% max-content;
-  min-height: 90vh;
-  margin-left: 20vw;
-  margin-right: 20vw;
-  margin-top: 9em;
+  -ms-grid-rows: max-content 40% max-content;
+      grid-template-rows: -webkit-max-content 40% -webkit-max-content;
+      grid-template-rows: max-content 40% max-content;
+  overflow-x: hidden;
 }
 
-.page-1 .page-content-container .top-container-page-1 {
+.page-1 .top-container-page-1 {
   position: relative;
   -ms-grid-row: 1;
       grid-row-start: 1;
@@ -29,24 +22,24 @@
   padding: 4%;
 }
 
-.page-1 .page-content-container .top-container-page-1 .top-left-container-page-1 {
-  width: 45%;
-  margin-right: 5%;
+.page-1 .top-container-page-1 .top-left-container-page-1 {
+  width: 30%;
+  margin-right: 4%;
 }
 
-.page-1 .page-content-container .top-container-page-1 .top-left-container-page-1 .my-photo {
+.page-1 .top-container-page-1 .top-left-container-page-1 .my-photo {
   width: 100%;
   border-radius: 50%;
   -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
           box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
 }
 
-.page-1 .page-content-container .top-container-page-1 .top-right-container-page-1 {
-  width: 55%;
+.page-1 .top-container-page-1 .top-right-container-page-1 {
+  width: 70%;
   font-family: 'Raleway', sans-serif;
   color: #252934;
   text-align: left;
-  padding: 2%;
+  padding: 3.73%;
   -webkit-transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
   transition: all 0.4s cubic-bezier(0.175, 0.885, 0, 1);
   border-radius: 12px;
@@ -57,14 +50,14 @@
   font-size: 2rem;
 }
 
-.page-1 .page-content-container .top-container-page-1 .top-right-container-page-1 .quotation-marks {
+.page-1 .top-container-page-1 .top-right-container-page-1 .quotation-marks {
   white-space: nowrap;
   color: #f24e4e;
   font-size: 1.6rem;
   font-weight: 900;
 }
 
-.page-1 .page-content-container .middle-container-page-1 {
+.page-1 .middle-container-page-1 {
   position: relative;
   -ms-grid-row: 2;
       grid-row-start: 2;
@@ -77,7 +70,7 @@
           justify-content: center;
 }
 
-.page-1 .page-content-container .middle-container-page-1 .swipe-card {
+.page-1 .middle-container-page-1 .swipe-card {
   position: relative;
   background-color: #ffffff;
   position: absolute;
@@ -85,12 +78,12 @@
   height: 100%;
   will-change: transform;
   border-radius: 12px;
-  -webkit-box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 13px 10px -7px rgba(0, 0, 0, 0.1);
+  -webkit-box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
+          box-shadow: 5px 6px 10px 3px rgba(0, 0, 0, 0.1);
   overflow: hidden;
 }
 
-.page-1 .page-content-container .middle-container-page-1 .swipe-card .swipe-card-image {
+.page-1 .middle-container-page-1 .swipe-card .swipe-card-image {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -99,19 +92,40 @@
   width: 100%;
 }
 
-.page-1 .page-content-container .middle-container-page-1 .swipe-card .swipe-card-title {
+.page-1 .middle-container-page-1 .swipe-card .swipe-card-title {
   font-size: 1.4rem;
   font-weight: 500;
 }
 
-.page-1 .page-content-container .bottom-container-page-1 {
+.page-1 .bottom-container-page-1 {
+  position: relative;
   -ms-grid-row: 3;
       grid-row-start: 3;
   padding-top: 1em;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
 }
 
-.page-1 .page-content-container .bottom-container-page-1 .text-to-next-page {
-  font-size: 1.2rem;
+.page-1 .bottom-container-page-1 .down-page-button {
+  width: -webkit-fit-content;
+  width: -moz-fit-content;
+  width: fit-content;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+
+.page-1 .bottom-container-page-1 .down-page-button .text-to-next-page {
+  font-family: 'Raleway', sans-serif;
+  font-size: 1rem;
   font-weight: 500;
   text-transform: uppercase;
 }
